Streamline type imports, replace redundant qualified references with local types.